--- a/paginas/Nosotros/style.css
+++ b/paginas/Nosotros/style.css
@@ -66,10 +66,6 @@ header {
     margin: 0 2px;
 }
 
-.nav-bar ul li:last-child a {
-    margin-left: 40px;
-}
-
 .nav-bar ul li a:hover {
     color: #fefefe;
     background: #D9DC58;
@@ -424,10 +420,6 @@ footer {
 }
 
 .social-icon:nth-of-type(3) {
-    background-image: url(../../img/twitter.png);
-}
-
-.social-icon:nth-of-type(4) {
     background-image: url(../../img/video.png);
 }
 
@@ -460,12 +452,14 @@ footer {
     bottom: 20px;
     right: 20px;
     background-color: red;
+    border: 3px solid #ffffff;
+    border-radius: 7px;
 }
 
 .contact-info {
     display: none;
     position: absolute;
-    bottom: 50px;
+    bottom: 65px;
     right: 0;
     background-color: rgba(249, 249, 249, 0.416); 
     border: 2px solid #000000;
@@ -505,4 +499,8 @@ footer {
 #contact-button {
     background-color: #FFA500; 
     color: white;
+}
+
+#contact-logo {
+    font-size: 40px; 
 }
