--- a/paginas/Servicios/style.css
+++ b/paginas/Servicios/style.css
@@ -66,10 +66,6 @@ header {
     margin: 0 2px;
 }
 
-.nav-bar ul li:last-child a {
-    margin-left: 40px;
-}
-
 .nav-bar ul li a:hover {
     color: #fefefe;
     background: #D9DC58;
@@ -292,6 +288,50 @@ header {
     }
 }
 
+/*---------------Banner---------------*/
+.banner{
+    margin-top: 50px;
+    margin-bottom: 20px;
+    background: linear-gradient(rgba(17,17,17,.7),rgba(17,17,17,.7)), url(../../img/banner.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 3rem 2rem;
+    text-align: center;
+}
+
+.conten h3{
+    font-size: 3.5rem;
+    color: #4989A2;
+    margin-top: 1rem;
+    transition: 0.4s;
+}
+
+.conten p{
+    max-width: 60rem;
+    margin: 1.2rem auto;
+    font-size: 1.2rem;
+    color: #fff;
+    line-height: 2;
+}
+
+
+.conten a{
+    padding: 0.5rem 2rem;
+    outline: none;
+    border: 2px solid #e8f1fa;
+    background-color: transparent;
+    color: #e8f1fa;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.conten a:hover{
+    background: #2e2e2e;
+    color: #fff;
+}
+
 /*-----------------FOOTER--------------*/
 footer {
     width: 100%;
@@ -341,10 +381,6 @@ footer {
 }
 
 .social-icon:nth-of-type(3) {
-    background-image: url(../../img/twitter.png);
-}
-
-.social-icon:nth-of-type(4) {
     background-image: url(../../img/video.png);
 }
 
@@ -377,12 +413,14 @@ footer {
     bottom: 20px;
     right: 20px;
     background-color: red;
+    border: 3px solid #ffffff;
+    border-radius: 7px;
 }
 
 .contact-info {
     display: none;
     position: absolute;
-    bottom: 50px;
+    bottom: 65px;
     right: 0;
     background-color: rgba(249, 249, 249, 0.416); 
     border: 2px solid #000000;
@@ -422,4 +460,8 @@ footer {
 #contact-button {
     background-color: #FFA500; 
     color: white;
+}
+
+#contact-logo {
+    font-size: 40px; 
 }
