--- a/style.css
+++ b/style.css
@@ -797,7 +797,7 @@ footer {
 }
 
 .social-icon:nth-of-type(3) {
-    background-image: url(../../img/video.png);
+    background-image: url(./img/video.png);
 }
 
 .footer-menu-container {
