--- a/style.css
+++ b/style.css
@@ -11,12 +11,11 @@
 }
 
 :root {
-    --primary-color: #fead53;
+    --primary-color: #dd9543;
     --text-dark: #333333;
     --text-light: #ffffff33;
     --extra-light: #f3f4f6;
     --secondary-color: #e8f1fa;
-
     --max-width: 1300px;
 }
 
@@ -134,8 +133,8 @@ header {
 /*-----------------BG---------------*/
 .contenedor11 {
     min-height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
-        url("img/bg1.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
+        url("img/1.png");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -251,6 +250,34 @@ header {
 }
   
 /*--------------ABOUT US---------------*/
+.titulo {
+    max-width: 1300px;
+    padding: 0 45px;
+    margin: auto;
+    display: block;
+    margin-bottom: 6em;
+}
+
+.titulo h1 {
+    text-align: center;
+    color: #4989A2;
+    position: relative;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+.titulo h1::after {
+    content: '';
+    position: absolute;
+    width: 170px;
+    height: 3px;
+    background: #4989A2;
+    bottom: 0;
+    transform: translateX(-165%);
+}
+
 .about-section {
     padding: 100px 10px;
 }
@@ -290,6 +317,7 @@ header {
     flex: 1; 
     margin-left: 40px; 
     margin-top: 20px;
+    align-items: center;
 }
 
 .text {
@@ -300,6 +328,8 @@ header {
 
 .col2 p {
     margin: 10px 10px 30px 10px;
+    text-align: justify;
+    line-height: 1.5em;
 }
 
 .col2 h2 {
@@ -316,6 +346,8 @@ header {
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s;
+    width: 50%;
+    
 }
 
 .col2 a:hover {
@@ -366,6 +398,12 @@ header {
     }
 }
 
+@media (max-width: 495px) {
+    .titulo h1::after{
+        transform: translateX(-80%);
+    }
+}
+
 @media screen and (max-width: 388px) {
     .col1 {
         width: 300px;
@@ -380,160 +418,230 @@ header {
         width: 320px;
         height: 140px;
     }
+
+    .col2 a{
+        margin: 8em 0 -3em 0;
+    }
 } 
+
+@media (max-width: 376px) {
+    .titulo h1::after{
+        transform: translateX(-95%);
+    }
+}
+
+@media screen and (max-width: 321px) {
+    .content h1{
+        font-size: 2rem;
+    }
+
+    .col1 {
+        width: 250px;
+        height: 340px;
+    }
+
+    .titulo h1{
+        font-size: 2rem;
+    }
+
+    .titulo h1::after{
+        transform: translateX(-85%);
+    }
+
+    .col2 p{
+        width: 80%;
+    }
+
+    .col2 a{
+        margin: 12em 0 -3em 0;
+    }
+}
 
 /*-----------------Banner - transporte y Turism-------------*/
 .servicio {
-    padding: 50px 0;
-    position: relative
+    margin: 60px 0;
 }
 
-.contenedor {
-    display: flex;
-    justify-content: center;
+.grupos {
+    display: grid;
+    gap: 0;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.bloque {
     align-items: center;
-    position: relative; 
-}
-
-.texto-servicio {
-    flex: 1;
-    padding: 20px;
-}
-
-.texto-servicio h2 {
-    font-size: 40px;
-    margin-bottom: 20px;
-    color: #000;
-}
-
-.texto-servicio p {
-    font-size: 18px;
-}
-
-.bottom-enlace {    
-    margin-top: 27px;
-}
-
-.imagen-servicio {
-    flex: 1;
     display: flex;
-    justify-content: center;
-    overflow: hidden; 
-    margin: 0; 
-    padding: 0; 
-}
-
-.imagen-servicio img {
-    width: 100%; 
-    height: 100%; 
-    display: block; 
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.servicio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-@media (max-width: 768px) {
-
-    .contenedor {
-        flex-direction: column;
-    }  
-
-    .contenedor.reverse {
-        flex-direction: column-reverse;
-    }
-
-    .texto-servicio,
-    .imagen-servicio {
-        flex: auto;
-    }
-}
-
-
-/*-----------------BANNER--------------*/
-.banner__container {
-    background-image: linear-gradient(
-        rgba(35, 71, 103, 0.5),
-        rgba(35, 71, 103, 0.5)
-      ),
-      url("img/banner.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-  
-.banner__container .section__container {
-    padding: 10rem 1rem;
-    display: flex;
-    justify-content: center;
-}
-  
-.banner__content {
-    display: flex;
-    align-items: center;
     flex-direction: column;
-    gap: 1.5rem;
+    height: 30rem;
+    justify-content: center;
     text-align: center;
-    color: var(--extra-light);
-    padding: 0 1rem; 
-}
-  
-.banner__content h2 {
-    font-size: 2rem;
-    font-weight: 400;
-    max-width: 100%; 
 }
 
-.banner__content p {
-    max-width: 100%; 
-    width: auto; 
-    padding: 0 1rem; 
+.bloque-texto {
+    font-size: 1.3rem;
+    line-height: 1.8;
 }
 
-.banner__content button {
+.bloque-contenido {
+    border-block: 1px solid #fff;
+    color: #fff;
+    max-width: 40rem;
+    padding: 1rem 0;
+}
+
+.bloque-heading {
+    margin: 2rem;
+    font-size: 3.8rem;
+    text-transform: uppercase;
+}
+
+.bloque:first-child {
+    background-color: #4989A2;
+}
+
+.bloque:nth-child(2) {
+    background-image: url(img/transporte.png);
+    background-position: 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*----Turistico---*/
+.bloques {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 30rem;
+    justify-content: center;
+    text-align: center;
+}
+
+.bloques:first-child {
+    background-image: url(img/citytour.png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bloques:nth-child(2) {
+    background-color: #fbc848;
+}
+
+
+
+@media screen and (max-width: 1500px) {
+    .bloque,.bloques {
+        height: 26rem;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .bloque-contenido {
+        padding: 1rem 2rem;
+    }
+
+    .bloque-texto {
+        font-size: 1.1rem;
+        line-height: 1.3;
+    }
+
+    .bloque-heading {
+        margin: 1.8rem;
+        font-size: 3.4rem;
+        text-transform: uppercase;
+    }
+}
+
+@media screen and (max-width: 937px) {
+    .grupos {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+
+    /*---Tranporte---*/
+    .bloque:nth-child(2) {
+        background-image: url(img/transporte.png);
+        background-position: 10%;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    /*---Turistico---*/
+    .bloques:first-child {
+        background-image: url(img/citytour.png);
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        grid-row: 2;
+    }
+}
+
+
+@media screen and (max-width: 475px) {
+    .bloque,
+    .bloques {
+        height: auto; 
+    }
+
+    .bloque-contenido {
+        padding: 1rem; 
+    }
+
+    .bloque-texto {
+        font-size: 1rem; 
+        line-height: 1.5; 
+    }
+
+    .bloque-heading {
+        font-size: 2.5rem; 
+    }
+}
+
+/*---------------Banner---------------*/
+.banner{
+    margin-top: 50px;
+    margin-bottom: 20px;
+    background: linear-gradient(rgba(17,17,17,.7),rgba(17,17,17,.7)), url(img/banner.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 3rem 2rem;
+    text-align: center;
+}
+
+.conten h3{
+    font-size: 3.5rem;
+    color: #fff;
+    margin-top: 1rem;
+    transition: 0.4s;
+    text-transform: uppercase;
+}
+
+.conten p{
+    max-width: 60rem;
+    margin: 1.2rem auto;
+    font-size: 1.2rem;
+    color: #fff;
+    line-height: 2;
+}
+
+
+.conten a{
     padding: 0.5rem 2rem;
     outline: none;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid #e8f1fa;
     background-color: transparent;
-    color: var(--secondary-color);
+    color: #e8f1fa;
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.4s ease;
 }
 
-.banner__content button:hover {
+.conten a:hover{
     background: #2e2e2e;
     color: #fff;
-}
-  
-@media (max-width: 900px) {
-    .banner__container .section__container {
-      justify-content: flex-end;
-    }
-  
-    .banner__content {
-      align-items: flex-end;
-      text-align: right;
-      max-width: 800px;
-    }
-
-    .banner__content h2 {
-        font-size: 1.5rem;
-    }
-}
-
-
-@media (max-width: 500px) {
-    .banner__content {
-        align-items: center;
-        text-align: center;
-        max-width: 800px;
-      }
 }
 
 /*--------------SERVICE----------------*/
