--- a/paginas/Nosotros/style.css
+++ b/paginas/Nosotros/style.css
@@ -133,7 +133,7 @@ header {
 /*--------------------------BG----------------------*/
 .contact-bg{
     height: 50vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(img/bg1.webp);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(img/bg1.jpg);
     background-position: center;
     background-size: cover; 
     background-repeat: no-repeat;
