--- a/paginas/Servicios/style.css
+++ b/paginas/Servicios/style.css
@@ -333,6 +333,24 @@ header {
     color: #fff;
 }
 
+@media screen and (max-width: 426px) {
+    .conten h3{
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 376px) {
+    .conten h3{
+        font-size: 2.7rem;
+    }
+}
+
+@media screen and (max-width: 326px) {
+    .conten h3{
+        font-size: 2.4rem;
+    }
+}
+
 /*-----------------FOOTER--------------*/
 footer {
     width: 100%;
