--- a/style.css
+++ b/style.css
@@ -650,9 +650,15 @@ header {
     }
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 376px) {
     .conten h3{
-        font-size: 2.8rem;
+        font-size: 2.7rem;
+    }
+}
+
+@media screen and (max-width: 326px) {
+    .conten h3{
+        font-size: 2.4rem;
     }
 }
 
@@ -793,7 +799,6 @@ header {
 .contenedores img { 
     max-width: 100%;
     display: block;
-    border: 7px solid #1f1f1f;
 }
 
 .contenedores h2 {
