--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
 }   
-  
+
 .container {
     display: flex;
     min-height: 100vh;
@@ -147,15 +147,15 @@ header {
     margin: auto auto auto 150px;
     padding: 2rem;
     padding-top: 100px;
-  }
-  
+}
+
 .container__left {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
-  
+
 .container__left .content {
     max-width: 700px;
     display: grid;
@@ -174,6 +174,13 @@ header {
     margin-bottom: 1rem; 
 }
 
+.texto-cambiante {
+    font-size: 2rem;
+    color: white;
+    font-weight: bold;
+    margin-top: 1rem;
+    text-transform: uppercase;
+}
   
 .content p {
     max-width: 100%; 
