--- a/paginas/Contacto/style.css
+++ b/paginas/Contacto/style.css
@@ -484,8 +484,12 @@ footer {
 
 .footer-menu-container {
     list-style-type: none;
-    color: #f2f2f2;
     font-size: 18px;
+}
+
+.footer-menu-container a{
+    text-decoration: none;
+    color: #f2f2f2;
 }
 
 .menu-item {
