--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ header {
 .banner{
     margin-top: 50px;
     margin-bottom: 20px;
-    background: linear-gradient(rgba(17,17,17,.7),rgba(17,17,17,.7)), url(img/banner.png) no-repeat;
+    background: linear-gradient(rgba(17,17,17,.7),rgba(17,17,17,.7)), url(./img/banner.webp) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -935,8 +935,12 @@ footer {
 
 .footer-menu-container {
     list-style-type: none;
-    color: #f2f2f2;
     font-size: 18px;
+}
+
+.footer-menu-container a{
+    text-decoration: none;
+    color: #f2f2f2;
 }
 
 .menu-item {
