--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header {
 .contenedor11 {
     min-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
-        url("img/1.png");
+        url("img/1.1.jpeg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
