--- a/paginas/Nosotros/style.css
+++ b/paginas/Nosotros/style.css
@@ -175,8 +175,8 @@ header {
 /*------------------SOBRE NOSOTROS - INTRO*----------------*/
 
 .about-section{
-    background: url(img/bg.webp) no-repeat left;
-    background-size: 55%;
+    background: url(../../img/nosotros.jpeg) no-repeat left;
+    background-size: 45%;
     background-color: #fdfdfd;
     overflow: hidden;
     padding: 50px 0;
